# Email-Service-C-

./: .gitignore  CMakeLists.txt  README.md
src/: AppComponent.hpp  config_boilerplate.txt
src/EmailUtility/: EmailHandler.cpp
src/config/: config.cpp  config.h
src/controller/: MyController.hpp
src/database/: database.cpp  database.h  databaseWrapper.cpp  psql.cpp  psql.h
src/dto/: DTOs.hpp
